--- a/src/sass/essential/_variables.scss
+++ b/src/sass/essential/_variables.scss
@@ -4,12 +4,16 @@
 }
 
 html body {
-    width: auto!important; 
-    overflow-x: hidden!important;
     --wp--preset--font-size--small: 1rem;
     --wp--preset--font-size--medium: 1.5rem;
     --wp--preset--font-size--large: 2rem;
     --wp--preset--font-size--x-large: 3rem;
+}
+
+html{
+    width: auto!important; 
+    overflow-x: hidden!important;
+    scroll-behavior: smooth !important;
 }
 
 :root {
